--- a/Lecture3/array_func_2.html
+++ b/Lecture3/array_func_2.html
@@ -7,11 +7,24 @@
 </head>
 <body>
     <script>
-        let arr = [23,100,45,679,78,12,9] //2-- 200      
+        let arr = [23,100,45,679,78,12,9] //2-- 200     
+        // let arr2 = arr.toString()
+        console.log('array is '+arr+"<br>")
+        // console.log('array string is '+arr2+"<br>")
+        delete arr[3]
+        console.log('array is '+arr+"<br>")
+        console.log('array is '+arr[3]+"<br>")
+        a = [345,67]
+        b = [78,89]
+        let arr2 = arr.concat(a,b)
+        console.log('array merge is '+arr2+"<br>")
+
+
+
         //splice
-        document.write('array is '+arr+"<br>")
-        arr.splice(2,1,111,222);
-        document.write('After add array is '+arr+"<br>")
+        // document.write('array is '+arr+"<br>")
+        // arr.splice(2,1,111,222);
+        // document.write('After add array is '+arr+"<br>")
         // document.write('Sorting array is '+arr.sort()+"<br>")
         // document.write('Sorting array - desc is '+arr.reverse()+"<br>")
         // //compare function
